--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "nest build",
     "format": "prettier --write \\\\\\\"apps/**/*.ts\\\\\\\" \\\\\\\"libs/**/*.ts\\\\\\\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:local": "cross-env NODE_ENV=local nest start --watch",
+    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:prod": "node dist/apps/nestjs-template/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.0.9",
@@ -31,6 +32,8 @@
     "axios": "^0.24.0",
     "class-transformer": "0.4.0",
     "class-validator": "^0.13.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "got": "^11.8.2",
     "js-joda": "^1.11.0",
     "mustache": "^4.2.0",
@@ -49,6 +52,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.0.0",
