--- a/package.json
+++ b/package.json
@@ -6,44 +6,34 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \\\\\\\"apps/**/*.ts\\\\\\\" \\\\\\\"libs/**/*.ts\\\\\\\"",
     "start": "nest start",
     "start:local": "cross-env NODE_ENV=local nest start --watch",
     "start:dev": "cross-env NODE_ENV=dev nest start --watch",
-    "start:prod": "node dist/apps/nestjs-template/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/nestjs-template/test/jest-e2e.json"
+    "start:prod": "corss-env NODE_ENV=prod nest start",
+    "lint": "eslint \"{apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.0.9",
+    "@nestjs/terminus": "^10.2.0",
     "@nestjs/typeorm": "^8.0.2",
     "@types/mustache": "^4.1.2",
     "@types/winston": "^2.4.4",
-    "axios": "^0.24.0",
     "class-transformer": "0.4.0",
     "class-validator": "^0.13.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "got": "^11.8.2",
     "js-joda": "^1.11.0",
-    "mustache": "^4.2.0",
     "nest-winston": "^1.6.0",
-    "pg": "^8.7.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.1.6",
-    "ts-jenum": "^2.2.2",
     "typeorm": "^0.2.37",
     "typeorm-naming-strategies": "^2.0.0",
     "winston": "^3.3.3"
